--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="Web site created using create-react-app"/>
     <link rel="apple-touch-icon" href="/logo192.png"/>
     <link rel="manifest" href="/manifest.json"/>
-    <title>React App</title>
+    <title>Ilya Nahorny</title>
     <script defer="defer" src="/static/js/main.8317b7f8.js"></script>
     <link href="/static/css/main.00dc84a6.css" rel="stylesheet">
 </head>
