--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <link rel="apple-touch-icon" href="/logo192.png"/>
     <link rel="manifest" href="/manifest.json"/>
     <title>Ilya Nahorny</title>
-    <script defer="defer" src="/static/js/main.8317b7f8.js"></script>
-    <link href="/static/css/main.00dc84a6.css" rel="stylesheet">
+    <script defer="defer" src="/cv/static/js/main.8317b7f8.js"></script>
+    <link href="/cv/static/css/main.00dc84a6.css" rel="stylesheet">
 </head>
 <body>
 <noscript>You need to enable JavaScript to run this app.</noscript>
