--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
     <meta name="description" content="Web site created using create-react-app"/>
     <link rel="apple-touch-icon" href="/logo192.png"/>
     <link rel="manifest" href="/manifest.json"/>
-    <title>Ilya Nahorny</title>
-    <script defer="defer" src="/cv/static/js/main.8317b7f8.js"></script>
-    <link href="/cv/static/css/main.00dc84a6.css" rel="stylesheet">
+    <title>React App</title>
+    <script defer="defer" src="/static/js/main.36624b3f.js"></script>
+    <link href="/static/css/main.950d1654.css" rel="stylesheet">
 </head>
 <body>
 <noscript>You need to enable JavaScript to run this app.</noscript>
